refactor: update color scheme and button variants across the application
- Replaced 'brand' color references with 'primary' and 'success' color variants throughout the application
- Updated global CSS variables to align with the new color naming convention
- Adjusted button, header, footer, and other component styles to use the new color palette
- Added more granular color variations for primary and success colors
- Improved consistency in color usage across different components and pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,17 +14,17 @@ html {
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-    --primary: 71 92% 69%;
-    --primary-dark: 71 74% 61%;
-    --primary-darker: 71 61% 53%;
-    --primary-foreground: 239 75% 32%;
-    --primary-foreground-dark: 0 0% 52%;
-    --brand: 239 73% 59%;
-    --brand-dark: 239 66% 42%;
-    --brand-darker: 239 75% 32%;
-    --brand-foreground: 0 0% 100%;
-    --brand-background-dark:240 100% 99%;
-    --brand-background-darker: 239 45% 95%;
+    --success: 71 92% 69%;
+    --success-dark: 71 74% 61%;
+    --success-darker: 71 61% 53%;
+    --success-foreground: 239 75% 32%;
+    --success-foreground-dark: 0 0% 52%;
+    --primary: 239 73% 59%;
+    --primary-dark: 239 66% 42%;
+    --primary-darker: 239 75% 32%;
+    --primary-foreground: 0 0% 100%;
+    --primary-background-dark:240 100% 99%;
+    --primary-background-darker: 239 45% 95%;
     --secondary: 239 45% 95%;
     --secondary-foreground: 240 5.9% 10%;
     --muted: 240 4.8% 95.9%;
